# ForkerRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  buffer.cpp  camera.cpp  camera.h  forkergl.cpp  forkergl.h  geometry.cpp  light.h  model.h  tgaimage.cpp
.github/workflows/: cmake.yml  markdown-link-check.yml
scenes/: test.scene
src/: buffer.cpp  buffer.h  camera.cpp  camera.h  check.h  color.h  constant.h  forkergl.cpp  forkergl.h  forkerpch.h  geometry.cpp  geometry.h  light.h  main.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  output.cpp  output.h  render.cpp  render.h  scene.cpp  scene.h  shader.h  stringprint.h  texture.h  tgaimage.cpp  tgaimage.h  utility.h
src/materials/: material.h  pbrmaterial.h
src/shaders/: depthshader.h  geometryshader.h  gshader.h  pbrshader.h  phongshader.h  shader.h  shadow.cpp  shadow.h
